--- a/views/page.ejs
+++ b/views/page.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-                TypeScript and React
+                Advent Of Code 2024
         </title>
         <link rel="icon" href="/assets/favicon.ico"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
